data/derived/comb/progs/unify/prog4000.ml.out
Characters 51-52:
  if (listReverse (explode w)) = w then 1
                                 ^
Error: This expression has type string but an expression was expected of type
         char list
